# n_queens

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs  queens.rs  test.rs
