[package]
name = "playground_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# itertools = "*"
# num = "*"
# winit = { git = "https://github.com/rust-windowing/winit", branch = "master" }

# tokio = { version = "1.40.x", features = ["rt", "rt-multi-thread"] }

# [dependencies.windows]
# version  = "0.58.x"
# features = [
#   "UI_ViewManagement", 
#   "Win32_Devices_HumanInterfaceDevice", 
#   "Win32_Foundation", 
#   "Win32_Security", 
#   "Win32_System_SystemInformation", 
#   "Win32_System_Threading", 
#   "Win32_UI_Accessibility", 
#   "Win32_UI_Controls", 
#   "Win32_UI_HiDpi", 
#   "Win32_UI_WindowsAndMessaging", 
#   "Win32_Graphics_Dwm", 
#   "Win32_Graphics_Gdi", 
#   "Win32_System_LibraryLoader", 
#   "Win32_System_SystemServices", 
#   "Win32_UI_Input", 
#   "Win32_UI_Input_KeyboardAndMouse", 
#   "Win32_UI_Shell_Common", 
#   "Win32_UI_Shell_PropertiesSystem"
# ]